Ensure box-shadow of cm-notifications dont get cut off

--- a/src/components/cm-notification-container/cm-notification-container.scss
+++ b/src/components/cm-notification-container/cm-notification-container.scss
@@ -15,9 +15,6 @@
 	overflow: hidden;
 
 	cm-notification {
-		overflow: hidden;
-		padding: 5px 0px;
-
 		&.hidden {
 			position: absolute;
 			bottom: 1000px;
