--- a/src/components/cm-notification-container/cm-notification/cm-notification.scss
+++ b/src/components/cm-notification-container/cm-notification/cm-notification.scss
@@ -3,6 +3,10 @@
 	box-sizing: border-box;
 }
 
+.shadowContainer {
+	padding: 5px;
+}
+
 .container {
 	display: grid;
 	box-sizing: border-box;
